<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_home"
            android:checked="true"
            android:title="@string/tv_home" />
        <item
            android:icon="@drawable/ic_setting"
            android:title="@string/tv_setting" />

        <item
            android:icon="@drawable/ic_theme"
            android:title="@string/tv_theme" />

        <item
            android:icon="@drawable/ic_scans"
            android:title="@string/tv_scans" />

        <item
            android:icon="@drawable/ic_feedback"
            android:title="@string/tv_feedback" />

        <item
            android:icon="@drawable/ic_updates"
            android:title="@string/tv_updates" />

        <item
            android:icon="@drawable/ic_about"
            android:title="@string/tv_about" />

        <item
            android:icon="@drawable/ic_exit"
            android:title="@string/tv_exit" />

    </group>

</menu>
